Added Banner Section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Development Journey</title>
+    <title>Web Developer Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="banner-container">
+        <div class="banner-content">
+            <img class="banner-profile-pic" src="assets/Group.png" alt="Coming Soon">
+            <h1 class="banner-title">"In the near future, I hope to become a <br>
+                Developer."</h1>
+            <p class="banner-description">I will embrace the challenge of web development with passion and perseverance, I will do my best for this segment.</p>
+            <button class="btn-primary">Contact with me</button>
+        </div>
+    </header>
+    <main>
+    </main>
+    <footer></footer>
 </body>
 </html>
