Added Layer-1 design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
             <button class="btn-primary">Contact with me</button>
         </div>
     </header>
-    <main>
+    <main class="main-section-container">
+        <!-- Why Web Development?? section starts from here -->
+         <section class="second-section-container">
+            <div class="second-section-content">
+                <h2 class="second-section-title">Why Web Development??</h2>
+                <p class="second-section-description">Web development offers the chance to combine creativity with technical skills, enabling you to build innovative and impactful digital experiences. It also provides excellent job prospects and continuous learning opportunities, as the demand for skilled web developers remains high in a rapidly evolving tech landscape.</p>
+            </div>
+         </section>
+         <section class="layer1-container">
+            <div class="layer1-leftside-content">
+                <h3 class="layer1-leftside-content-title">I will Do Coding and Change The <br>
+                    World</h3>
+                    <p class="layer1-leftside-content-description">I will consistently put my effort to be a successful web developer.</p>
+                    <button class="btn-secondary">Learn More</button>
+            </div>
+            <div class="layer1-rightside-content">
+                <img class="layer1-img" src="assets/Layer_1.png" alt="Layer_1">
+            </div>
+         </section>
+        <!-- Why Web Development?? section ends here -->
     </main>
     <footer></footer>
 </body>
