Added Layer-2 & Layer-3 design

--- a/index.html
+++ b/index.html
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header class="banner-container">
         <div class="banner-content">
             <img class="banner-profile-pic" src="assets/Group.png" alt="Coming Soon">
             <h1 class="banner-title">"In the near future, I hope to become a <br>
                 Developer."</h1>
-            <p class="banner-description">I will embrace the challenge of web development with passion and perseverance, I will do my best for this segment.</p>
+            <p class="banner-description">I will embrace the challenge of web development with passion and perseverance,
+                I will do my best for this segment.</p>
             <button class="btn-primary">Contact with me</button>
         </div>
     </header>
     <main class="main-section-container">
         <!-- Why Web Development?? section starts from here -->
-         <section class="second-section-container">
+        <section class="second-section-container">
             <div class="second-section-content">
                 <h2 class="second-section-title">Why Web Development??</h2>
-                <p class="second-section-description">Web development offers the chance to combine creativity with technical skills, enabling you to build innovative and impactful digital experiences. It also provides excellent job prospects and continuous learning opportunities, as the demand for skilled web developers remains high in a rapidly evolving tech landscape.</p>
+                <p class="second-section-description">Web development offers the chance to combine creativity with
+                    technical skills, enabling you to build innovative and impactful digital experiences. It also
+                    provides excellent job prospects and continuous learning opportunities, as the demand for skilled
+                    web developers remains high in a rapidly evolving tech landscape.</p>
             </div>
-         </section>
-         <section class="layer1-container">
+        </section>
+        <section class="layer1-container">
             <div class="layer1-leftside-content">
                 <h3 class="layer1-leftside-content-title">I will Do Coding and Change The <br>
                     World</h3>
-                    <p class="layer1-leftside-content-description">I will consistently put my effort to be a successful web developer.</p>
-                    <button class="btn-secondary">Learn More</button>
+                <p class="layer1-leftside-content-description">I will consistently put my effort to be a successful web
+                    developer.</p>
+                <button class="btn-secondary">Learn More</button>
             </div>
             <div class="layer1-rightside-content">
                 <img class="layer1-img" src="assets/Layer_1.png" alt="Layer_1">
             </div>
-         </section>
+        </section>
+        <section class="layer2-container">
+            <div class="layer2-leftside-content">
+                <img class="layer2-img" src="assets/Group 3.png" alt="Layer_2">
+            </div>
+            <div class="layer2-rightside-content">
+                <h3 class="layer2-rightside-content-title">I will help People by creating Modern <br>Web System</h3>
+                <p class="layer2-rightside-content-description">In the modern era, I want to build a advance web system that helps the people for modernization.</p>
+                <button class="btn-secondary">Learn More</button>
+            </div>
+        </section>
+        <section class="layer3-container">
+            <div class="layer3-leftside-content">
+                <h3 class="layer3-leftside-content-title">I will Do Coding and Change The <br>
+                World</h3>
+                <p class="layer3-leftside-content-description">I will not give up, I will put all my effort in development journey and achieve my goal.</p>
+                <button class="btn-secondary">Learn More</button>
+            </div>
+            <div class="rightside-content">
+                <img src="assets/Group 4.png" alt="Layer_3">
+            </div>
+        </section>
         <!-- Why Web Development?? section ends here -->
     </main>
     <footer></footer>
 </body>
+
 </html>
