added third section design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- banner styles starts from here -->
     <header class="banner-container">
         <div class="banner-content">
             <img class="banner-profile-pic" src="assets/Group.png" alt="Coming Soon">
@@ -19,6 +20,7 @@
             <button class="btn-primary">Contact with me</button>
         </div>
     </header>
+    <!-- banner styles ends here -->
     <main class="main-section-container">
         <!-- Why Web Development?? section starts from here -->
         <section class="second-section-container">
@@ -30,6 +32,9 @@
                     web developers remains high in a rapidly evolving tech landscape.</p>
             </div>
         </section>
+        <!-- Why Web Development?? section ends here -->
+        
+        <!-- layer-1 starts from here -->
         <section class="layer1-container">
             <div class="layer1-leftside-content">
                 <h3 class="layer1-leftside-content-title">I will Do Coding and Change The <br>
@@ -42,6 +47,9 @@
                 <img class="layer1-img" src="assets/Layer_1.png" alt="Layer_1">
             </div>
         </section>
+        <!-- layer-1 ends here -->
+
+        <!-- layer-2 starts from here -->
         <section class="layer2-container">
             <div class="layer2-leftside-content">
                 <img class="layer2-img" src="assets/Group 3.png" alt="Layer_2">
@@ -52,6 +60,9 @@
                 <button class="btn-secondary">Learn More</button>
             </div>
         </section>
+        <!-- layer-2 ends here -->
+
+        <!-- layer-3 starts from here -->
         <section class="layer3-container">
             <div class="layer3-leftside-content">
                 <h3 class="layer3-leftside-content-title">I will Do Coding and Change The <br>
@@ -63,7 +74,17 @@
                 <img src="assets/Group 4.png" alt="Layer_3">
             </div>
         </section>
-        <!-- Why Web Development?? section ends here -->
+        <!-- layer-3 ends here -->
+
+        <section class="third-section-container">
+            <div class="third-section-content">
+                <h2 class="third-section-content-title">My Inspiration</h2>
+                <p class="third-section-content-description">From the beginning, my inspiration was Jhankar Mahmub. I watched him on Youtube and his content change my life, that's why I choose Web Development.</p>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=EiNKEFZgAoJkkhRX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
