--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             </div>
         </section>
         <!-- layer-3 ends here -->
-
+         
+        <!-- third section starts from here -->
         <section class="third-section-container">
             <div class="third-section-content">
                 <h2 class="third-section-content-title">My Inspiration</h2>
@@ -85,6 +86,34 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=EiNKEFZgAoJkkhRX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
+        <!-- third section ends here -->
+        
+        <!-- skills section starts here -->
+         <section class="skills">
+            <h2 class="skills-section-title">My Current Target</h2>
+            <p class="skills-section-description">My current target is to be finished HTML, CSS and JavaScript. After finishing that I'll move to finish some frame works.</p>
+        <div class="skills-container">
+            <div class="skill color-1">
+                <img src="assets/html.png" alt="HTML">
+                <h4 class="skill-title">HTML</h4>
+                <p class="skill-description">HTML, or HyperText Markup Language, is the foundational language for creating and structuring content on the web.</p>
+                <a href=""><span style="font-size: x-small;">Learn More</span></a>
+            </div>
+            <div class="skill color-2">
+                <img src="assets/css.png" alt="CSS">
+                <h4 class="skill-title">CSS</h4>
+                <p class="skill-description">CSS is essential for web development as it allows designers to control the presentation, layout, and overall visual aesthetics of a website.</p>
+                <a href=""><span style="font-size: x-small;">Learn More</span></a>
+            </div>
+            <div class="skill color-3">
+                <img src="assets/js.png" alt="JavaScript">
+                <h4 class="skill-title">JavaScript</h4>
+                <p class="skill-description">JavaScript is a versatile and powerful programming language that enables dynamic and interactive features on websites, making it possible to create responsive user interfaces, perform real-time data updates, and enhance overall user engagement.</p>
+                <a href=""><span style="font-size: x-small;">Learn More</span></a>
+            </div>
+        </div>
+         </section>
+        <!-- skills section ends here -->
     </main>
     <footer></footer>
 </body>
