--- a/index.html
+++ b/index.html
@@ -136,8 +136,19 @@
                     </div>
                 </div>
             </section>
+            <section class="footer-container">
+                <footer class="footer-section">
+                        <div class="left-part">
+                            <p><h3>An Open Commitment by Tuhin</h3></p>
+                        </div>
+                        <div class="righ-part">
+                            <a href="https://web.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="Facebook"></a>
+                            <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="GitHub"></a>
+                            <a href="https://www.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png" alt="LinkedIn"></a>
+                        </div>
+                </footer>
+            </section>
         </section>
     </main>
 </body>
-
 </html>
