Modity Learn More

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                     <h4 class="skill-title">HTML</h4>
                     <p class="skill-description">HTML, or HyperText Markup Language, is the foundational language for
                         creating and structuring content on the web.</p>
-                    <a href=""><span style="font-size: x-small;">Learn More</span></a>
+                    <a class="link"  href=""><span style="font-size: x-small;">Learn More</span></a>
                 </div>
                 <div class="skill color-2">
                     <img src="assets/css.png" alt="CSS">
                     <h4 class="skill-title">CSS</h4>
                     <p class="skill-description">CSS is essential for web development as it allows designers to control
                         the presentation, layout, and overall visual aesthetics of a website.</p>
-                    <a href=""><span style="font-size: x-small;">Learn More</span></a>
+                    <a class="link"  href=""><span style="font-size: x-small;">Learn More</span></a>
                 </div>
                 <div class="skill color-3">
                     <img src="assets/js.png" alt="JavaScript">
@@ -120,7 +120,7 @@
                     <p class="skill-description">JavaScript is a versatile and powerful programming language that
                         enables dynamic and interactive features on websites, making it possible to create responsive
                         user interfaces, perform real-time data updates, and enhance overall user engagement.</p>
-                    <a href=""><span style="font-size: x-small;">Learn More</span></a>
+                    <a class="link"  href=""><span style="font-size: x-small;">Learn More</span></a>
                 </div>
             </div>
             <section class="support-section">
